CSE-1346 - Correct check for SIC code changes